tests/ui/consts/const-assert-unchecked-ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-assert-unchecked-ub.rs:6:5
   |
LL |     std::hint::assert_unchecked(n < 32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `assume` called with `false`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
